fixed spacing and highlights to sidebar

--- a/src/App.scss
+++ b/src/App.scss
@@ -240,7 +240,6 @@ th {
   }
 
   .sidebar {
-    border: solid 3px pink;
     grid-area: sidebar;
     z-index: 999;
   }
