--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -18,14 +18,9 @@ $break-lg: 1280px;
     position: relative;
     height: 100%;
     border-bottom: 1px solid #d8dce6;
-    border: solid red 3px;
 
     @media only screen and (min-width: $break-md) {
       display: none;
-    }
-
-    .toolbar {
-      border: solid green 3px;
     }
 
     .menuButton {
@@ -41,7 +36,6 @@ $break-lg: 1280px;
 
   .contentContainer {
     width: 100%;
-    border: solid yellow 3px;
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
@@ -49,7 +43,6 @@ $break-lg: 1280px;
     height: 100%;
 
     .drawer {
-      border: solid purple 3px;
       width: 100%;
       height: 100%;
       @media only screen and (min-width: $break-md) {
@@ -58,9 +51,7 @@ $break-lg: 1280px;
       }
 
       .firstHidden {
-        border: solid 3px orangered;
         .drawerPaper {
-          border: solid red 3px;
           width: 100%;
           padding-top: 8;
           border: none;
@@ -69,7 +60,6 @@ $break-lg: 1280px;
           height: 100vh;
 
           .formControl {
-            border: solid brown 3px;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -84,7 +74,6 @@ $break-lg: 1280px;
               width: 100%;
 
               .formItem {
-                border: solid blue 3px;
                 border-bottom: 1px solid rgb(204, 204, 204);
                 font-weight: 500;
               }
@@ -94,19 +83,13 @@ $break-lg: 1280px;
       }
 
       .secondHidden {
-        border: solid 10px blue;
         width: 100%;
         height: 100%;
 
-        .newPaperDrawer {
-          border: solid 3px red;
-          width: 100%;
-          padding-top: 8;
-          border-right: 1px solid #dfe2e5;
+        .newDrawerPaper {
           height: 100%;
 
           .formControl {
-            border: solid 3px green;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -130,7 +113,6 @@ $break-lg: 1280px;
     }
 
     .content {
-      border: solid 3px red;
       background: rgba(0, 0, 0, 0.01);
       height: 100vh;
       flex-grow: 1;
