--- a/src/index.css
+++ b/src/index.css
@@ -15,23 +15,3 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
-
-/* BEGIN global css for Sidebar Nav Sidebar/index.js */
-.sidebar-nav-item a {
-  color: #707070;
-}
-
-.sidebar-nav-item:hover a {
-  text-decoration: none !important;
-}
-
-.sidebar-nav-item-active a {
-  color: #343f51 !important;
-  font-weight: bold;
-}
-
-.sidebar-nav-item-active svg {
-  color: #205df5;
-}
-
-/* END global css for Sidebar Nav Sidebar/index.js */
